--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   flutter_popup: ^3.3.9
   record: ^6.1.2
   permission_handler: ^12.0.1
+  badges: ^3.1.2
 
 dev_dependencies:
   flutter_test:
