--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  flutter_localizations:  # 这个通常内置，无需额外声明
+    sdk: flutter
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
@@ -48,6 +49,8 @@ dependencies:
   record: ^6.1.2
   permission_handler: ^12.0.1
   badges: ^3.1.2
+  event_bus: ^2.0.1
+  fluttertoast: ^9.0.0
 
 dev_dependencies:
   flutter_test:
